--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     margin-right: 15px;  
     font-weight: bold;
    line-height: 1px; 
-   margin-top: 9px;
+   margin-top: 28px;
 }
 
 .logo{
@@ -36,9 +36,9 @@ body{
 .poisk{
     margin-top: 24px
 }
-.button-new{
-  
-    all: unset;
+.button-new {
+    text-decoration:none ;
+   
     padding: 22px 45px;
     background: #62B545;
    border-radius: 5px;
@@ -46,7 +46,10 @@ body{
    font-weight: 500;
 font-size: 25px;
 line-height: 19px;
-
+transition: all 0.5s ease 0s;
+}
+.button-new:hover{
+background-color: rgb(90, 90, 90);
 }
 .new{
     display: flex;
@@ -56,7 +59,7 @@ line-height: 19px;
 }
 .button-film{
   
-    all: unset;
+    text-decoration:none ;
     padding: 22px 45px;
     background: #62B545;
    border-radius: 5px;
@@ -64,11 +67,25 @@ line-height: 19px;
    font-weight: 500;
 font-size: 25px;
 line-height: 19px;
-margin-top: 30px;
-
+top: 20px;
+transition: all 0.5s ease 0s;
+}
+.button-film:hover{
+    background-color: rgb(90, 90, 90) 
 }
 .new2{
     display: flex;
     list-style-type: none;
     margin-top: 40px;
 }
+.photo:hover img{
+transform: scale(1.1);
+}
+.photo img{
+    transition:all 0.5s ease 0s;
+}
+.menu-item:hover {
+    transform: scale(1.1);
+   
+}
+
